--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <iframe width="75%" height="720" src="https://www.youtube.com/embed/UZewr8d5244" frameborder="0" allowfullscreen></iframe>
     </section>
     <!-- Gallery -->
-    <section id="gallery" >
+    <!--<section id="gallery" >
         <ul id="lightSlider">            
             <a href="https://www.youtube.com/watch?v=SscdVzdnXrw&feature=youtu.be" data-poster="assets/img/fotos/you1.jpg" >
                 <img src="assets/img/fotos/you1.jpg" />
@@ -934,7 +934,7 @@
                 </a>
             </li>
         </ul>
-    </section>
+    </section> ->
     
     <!-- Testimonials -->
     <section id="testimonials">                 
