--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <iframe width="75%" height="720" src="https://www.youtube.com/embed/UZewr8d5244" frameborder="0" allowfullscreen></iframe>
     </section>
     <!-- Gallery -->
-    <!--<section id="gallery" >
+    <section id="gallery" >
         <ul id="lightSlider">            
             <a href="https://www.youtube.com/watch?v=SscdVzdnXrw&feature=youtu.be" data-poster="assets/img/fotos/you1.jpg" >
                 <img src="assets/img/fotos/you1.jpg" />
@@ -223,6 +223,7 @@
                 </a>
             </li>
             
+            <!--
             <li data-pinterest-text="Venha conferir!" data-tweet-text="Venha conferir!" data-thumb="assets/img/fotos/12.jpg" data-src="assets/img/fotos/12.jpg">
                 <a href="assets/img/fotos/12.jpg">
                     <img src="assets/img/fotos/12.jpg" alt="" width="" height="">
@@ -933,8 +934,9 @@
                     <img src="assets/img/fotos/133.jpg" alt="" width="" height="">
                 </a>
             </li>
+            -->
         </ul>
-    </section> ->
+    </section> 
     
     <!-- Testimonials -->
     <section id="testimonials">                 
