--- a/index.html
+++ b/index.html
@@ -1066,24 +1066,24 @@
     <button class="material-scrolltop" type="button"></button>
     <div id="by">2017 • <a href="http://alegrow.com.br/dev/#">Mano Design</a></div>      
     
-    <script src="src/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="src/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="src/bower_components/wow/dist/wow.min.js"></script>
-    <script src="src/bower_components/lightgallery/dist/js/lightgallery.min.js"></script>
-    <script src="src/bower_components/lg-thumbnail/dist/lg-thumbnail.min.js"></script>
-    <script src="src/bower_components/lg-share/dist/lg-share.min.js"></script>
-    <script src="src/bower_components/lg-autoplay/dist/lg-autoplay.min.js"></script>
-    <script src="src/bower_components/lg-zoom/dist/lg-zoom.min.js"></script>
-    <script src="src/bower_components/lightslider/dist/js/lightslider.min.js"></script>
-    <script src="src/bower_components/lg-hash/dist/lg-hash.min.js"></script>
-    <script src="src/bower_components/lg-video/dist/lg-video.min.js"></script>
-    <script src="assets/js/material-scrolltop.js"></script>
-    <script src="src/bower_components/wow/dist/wow.min.js"></script>
-    <script src="assets/js/hxq1hay.js"></script>
-    <script src="assets/js/form.js"></script>
+    <script async="async" src="src/bower_components/jquery/dist/jquery.min.js"></script>
+    <script async="async" src="src/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script async="async" src="src/bower_components/wow/dist/wow.min.js"></script>
+    <script async="async" src="src/bower_components/lightgallery/dist/js/lightgallery.min.js"></script>
+    <script async="async" src="src/bower_components/lg-thumbnail/dist/lg-thumbnail.min.js"></script>
+    <script async="async" src="src/bower_components/lg-share/dist/lg-share.min.js"></script>
+    <script async="async" src="src/bower_components/lg-autoplay/dist/lg-autoplay.min.js"></script>
+    <script async="async" src="src/bower_components/lg-zoom/dist/lg-zoom.min.js"></script>
+    <script async="async" src="src/bower_components/lightslider/dist/js/lightslider.min.js"></script>
+    <script async="async" src="src/bower_components/lg-hash/dist/lg-hash.min.js"></script>
+    <script async="async" src="src/bower_components/lg-video/dist/lg-video.min.js"></script>
+    <script async="async" src="assets/js/material-scrolltop.js"></script>
+    <script async="async" src="src/bower_components/wow/dist/wow.min.js"></script>
+    <script async="async" src="assets/js/hxq1hay.js"></script>
+    <script async="async" src="assets/js/form.js"></script>
     <!--<script src="js/banner.js"></script>-->
-    <script src="assets/js/menu.js"></script>
-    <script src="assets/js/script.js"></script>    
+    <script async="async" src="assets/js/menu.js"></script>
+    <script async="async" src="assets/js/script.js"></script>    
     <script>
         new WOW().init();
         
