--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                 </a>                      
             </li>
             
-            <li data-pinterest-text="Venha conferir!" data-tweet-text="Venha conferir!" data-thumb="assets/img/fotos/2.jpg" data-src="assets/img/fotos/2.jpg">
+            <!-- <li data-pinterest-text="Venha conferir!" data-tweet-text="Venha conferir!" data-thumb="assets/img/fotos/2.jpg" data-src="assets/img/fotos/2.jpg">
                 <a href="assets/img/fotos/2.jpg">
                     <img src="assets/img/fotos/2.jpg" alt="" width="" height="">
                 </a>    
-            </li>
+            </li> -->
             
             <li data-pinterest-text="Venha conferir!" data-tweet-text="Venha conferir!" data-thumb="assets/img/fotos/3.jpg" data-src="assets/img/fotos/3.jpg">
                 <a href="assets/img/fotos/3.jpg">
